[gd_scene load_steps=5 format=3 uid="uid://df6rm8yg6ma14"]

[ext_resource type="Script" uid="uid://dykqv57iarrek" path="res://scripts/main.gd" id="1_0wfyh"]
[ext_resource type="Texture2D" uid="uid://c3abmguaxw67f" path="res://assets/grid.png" id="2_0wfyh"]
[ext_resource type="Script" uid="uid://b3d6deymks203" path="res://scripts/camera.gd" id="2_sugp2"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_sugp2"]
content_margin_left = 0.0
content_margin_top = 0.0
content_margin_right = 0.0
content_margin_bottom = 0.0
bg_color = Color(0.09803922, 0.09411765, 0.09803922, 1)
corner_detail = 5

[node name="main" type="Node2D"]
script = ExtResource("1_0wfyh")

[node name="Camera2D" type="Camera2D" parent="."]
position_smoothing_enabled = true
script = ExtResource("2_sugp2")

[node name="CanvasLayer" type="CanvasLayer" parent="Camera2D"]

[node name="Panel" type="Panel" parent="Camera2D/CanvasLayer"]
custom_minimum_size = Vector2(0, 32)
anchors_preset = 10
anchor_right = 1.0
grow_horizontal = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_sugp2")

[node name="MenuBar" type="MenuBar" parent="Camera2D/CanvasLayer/Panel"]
layout_mode = 0
offset_right = 135.0
offset_bottom = 40.0
flat = true

[node name="File" type="PopupMenu" parent="Camera2D/CanvasLayer/Panel/MenuBar"]
item_count = 3
item_0/text = "New File"
item_0/id = 0
item_1/text = "Save As"
item_1/id = 1
item_2/text = "Load File"
item_2/id = 2

[node name="SaveAsFileDialog" type="FileDialog" parent="Camera2D/CanvasLayer/Panel/MenuBar/File"]
filters = PackedStringArray("*.pinboard")
use_native_dialog = true

[node name="OpenFileDialog" type="FileDialog" parent="Camera2D/CanvasLayer/Panel/MenuBar/File"]
title = "Open a File"
file_mode = 0
access = 2
filters = PackedStringArray("*.pinboard")
use_native_dialog = true

[node name="Insert" type="PopupMenu" parent="Camera2D/CanvasLayer/Panel/MenuBar"]
item_count = 2
item_0/text = "Insert Image"
item_0/id = 0
item_1/text = "Insert Text"
item_1/id = 1

[node name="ImageFileDialog" type="FileDialog" parent="Camera2D/CanvasLayer/Panel/MenuBar/Insert"]
title = "Open a File"
file_mode = 0
access = 2
use_native_dialog = true

[node name="Label" type="Label" parent="Camera2D/CanvasLayer/Panel"]
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -1.0
grow_horizontal = 0
grow_vertical = 2
text = "Pinboard 1.0 "
horizontal_alignment = 2
vertical_alignment = 1

[node name="pins" type="Node2D" parent="."]

[node name="images" type="Node2D" parent="."]

[node name="text" type="Node2D" parent="."]

[node name="background" type="Parallax2D" parent="."]
show_behind_parent = true
repeat_size = Vector2(1900, 1000)
repeat_times = 15

[node name="image" type="TextureRect" parent="background"]
custom_minimum_size = Vector2(1900, 1000)
offset_right = 40.0
offset_bottom = 40.0
mouse_filter = 2
texture = ExtResource("2_0wfyh")
stretch_mode = 1

[connection signal="id_pressed" from="Camera2D/CanvasLayer/Panel/MenuBar/File" to="." method="_on_file_id_pressed"]
[connection signal="file_selected" from="Camera2D/CanvasLayer/Panel/MenuBar/File/SaveAsFileDialog" to="." method="_on_save_as_file_dialog_file_selected"]
[connection signal="file_selected" from="Camera2D/CanvasLayer/Panel/MenuBar/File/OpenFileDialog" to="." method="_on_open_file_dialog_file_selected"]
[connection signal="id_pressed" from="Camera2D/CanvasLayer/Panel/MenuBar/Insert" to="." method="_on_insert_id_pressed"]
[connection signal="file_selected" from="Camera2D/CanvasLayer/Panel/MenuBar/Insert/ImageFileDialog" to="." method="_on_image_file_dialog_file_selected"]
